--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,6 @@
 # This file lists all individuals having contributed content to the repository.
 
 
-Jennifer Huang <133@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com>
-Joaquin Pintaluba <jopintaluba@gmail.com>
-Federico Blengio <fedeeblengio@gmail.com>
-Ronald Rivero <ralexrivero@gmail.com>
+Maryann Unoarumi <Maryann529>
+Mendie Uwemedimo <@SlamChillz>
+Oluwateniola Adegbulugbe <@Ludten>
